bin/testsuite/tests/compiler/src/errors/compiler5432.swg
/*#global testerror "Err0058"
#test
{
    using var a, b: s32
}*/
